# baz_printing_lpdp

./: Cargo.toml
desktop/app/components/: FileDrop.vue  PrinterConfigPanel.vue  ProtocolSelector.vue  QueueViewer.vue
desktop/src-tauri/: Cargo.toml
desktop/src-tauri/src/: lib.rs
ipp_client/: Cargo.toml
ipp_client/src/: main.rs
printing/: Cargo.toml
printing/src/ipp/: client.rs  errors.rs  utils.rs
printing/src/lpd/: errors.rs
src/: client.rs  errors.rs
