[package]
name = "printing"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = { git = "https://github.com/allan2/dotenvy", features = ["macros"] }
reqwest = { version = "0.13.4", features = ["blocking"] }
rkyv = { version = "0.8.16", features = ["default", "big_endian"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
whoami = "2.1.2"
